[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l402-requests"
version = "0.1.0"
description = "Auto-paying L402 HTTP client — APIs behind Lightning paywalls just work"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Refined Element", email = "support@refinedelement.com" },
]
keywords = ["lightning", "l402", "bitcoin", "http", "payments", "lsat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
nwc = ["secp256k1>=0.14.0", "websockets>=12.0"]
lnd = ["grpcio>=1.60.0"]
all = ["secp256k1>=0.14.0", "websockets>=12.0", "grpcio>=1.60.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.urls]
Homepage = "https://lightningenable.com"
Documentation = "https://docs.lightningenable.com/tools/l402-requests"
Repository = "https://github.com/refined-element/l402-requests"
Issues = "https://github.com/refined-element/l402-requests/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/l402_requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
