[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l402-requests"
version = "0.2.1"
description = "Auto-paying L402 HTTP client — APIs behind Lightning paywalls just work"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Refined Element", email = "support@refinedelement.com" },
]
keywords = ["lightning", "l402", "bitcoin", "http", "payments", "lsat", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.25.0",
    # NWC (Nostr Wallet Connect) pubkey derivation + BIP340 Schnorr + ECDH.
    # coincurve ships prebuilt wheels for Linux, macOS, AND Windows, so NWC
    # works out of the box on every platform with no compiler toolchain.
    # (Replaced the old `secp256k1` C-extension, which had no Windows wheel.)
    "coincurve>=20.0.0",
    "websockets>=12.0",
    # NIP-04 AES-256-CBC encryption for NWC payload exchange. The MCP server
    # and l402-ts use the same primitive; pinning it as a base dep means the
    # whole pipeline works without optional extras.
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Back-compat no-op: `pip install l402-requests[nwc]` still resolves. NWC
# support is now in the base dependencies (coincurve + websockets +
# cryptography), so this extra is empty and exists only so existing install
# commands don't break.
nwc = []
lnd = ["grpcio>=1.60.0"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
autogen = ["ag2>=0.6.0"]
all = ["grpcio>=1.60.0"]
frameworks = ["langchain-core>=0.3.0", "crewai>=0.80.0", "ag2>=0.6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.urls]
Homepage = "https://lightningenable.com"
Documentation = "https://docs.lightningenable.com/tools/l402-requests"
Repository = "https://github.com/refined-element/l402-requests"
Issues = "https://github.com/refined-element/l402-requests/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/l402_requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
